--- a/app/views/events/index.html.haml
+++ b/app/views/events/index.html.haml
@@ -38,15 +38,11 @@
   })
 
 - content_for :sidebar do
-  %h1
-    = Time.current.strftime("%b %d")
+  %h1 Add an event
 
   - if logged_in?
   
     - if (@calendarable.is_a?(Project) && @calendarable.roles.first(:conditions => {:user_id => current_user.id})) || (@calendarable.is_a?(User) && @calendarable == current_user)
-      %h3
-        Add an event on
-        = Time.current.strftime("%b %d")
       = render :partial => "events/add_form", :locals => {:event => @calendarable.calendar.events.build(:start_at => Time.current)}
     %br
     - form_tag [@calendarable, :events], :method =>:get, :class => "filter_calendars_form" do
