--- a/app/views/events/index.html.haml
+++ b/app/views/events/index.html.haml
@@ -80,7 +80,11 @@
     %small_text.right
       = link_to "Import new calendar", [@calendarable, :calendars], :class => :colorbox
       %br
-      = link_to "Export calendar", polymorphic_path([@calendarable, :events], :format => :ics, :hash => @calendarable.calendar.private_url_hash)
+      = link_to "Download calendar", polymorphic_path([@calendarable, :events], :format => :ics, :hash => @calendarable.calendar.private_url_hash)
+      %br
+      = link_to "Export calendar URL", "#", :onclick => "$('.export_calendar_url').toggle(); return false"
+    .export_calendar_url.hide
+      = polymorphic_url([@calendarable, :events], :format => :ics, :hash => @calendarable.calendar.private_url_hash)
     %br
     - if @calendarable.calendars.count > 1
       - form_tag [@calendarable, :events], :method =>:get, :class => "filter_calendars_form" do
