--- a/app/views/articles/_new.html.haml
+++ b/app/views/articles/_new.html.haml
@@ -19,6 +19,6 @@
     
   })
 
-%h1 New research Feed
+%h1 Share a snippet
 = render :partial => "shared/learnmore"
 = render :partial => "form", :locals => {:article => article}
