--- a/public/stylesheets/sass/_default.sass
+++ b/public/stylesheets/sass/_default.sass
@@ -150,6 +150,11 @@ span.gray
         text-decoration: none
         font-weight: bold
         color: #FF5900
+  form
+    input[type=text]
+      height: 18px
+    input[type=text], textarea
+      border: 1px solid #aaa
 
 #content
   width: 76%
