--- a/app/views/events/index.html.haml
+++ b/app/views/events/index.html.haml
@@ -54,9 +54,9 @@
   %h1 Add an event
 
   - if logged_in?
-  
     - if (@calendarable.is_a?(Project) && @calendarable.roles.first(:conditions => {:user_id => current_user.id})) || (@calendarable.is_a?(User) && @calendarable == current_user)
       = render :partial => "events/add_form", :locals => {:event => @calendarable.calendar.events.build(:start_at => Time.current)}
+      = link_to "Advanced create event form", [:new, @calendarable, :event]
     - if @calendarable.is_a?(User)
       - form_tag [@calendarable, :events], :method =>:get, :class => "filter_calendars_form" do
         %h2 Filter by projects
