--- a/app/views/articles/_form.html.haml
+++ b/app/views/articles/_form.html.haml
@@ -1,13 +1,21 @@
+:javascript
+  $('document').ready(function(){
+    $('.date_picker').datepicker({
+      changeMonth: true,
+      changeYear: true
+    });
+  });
+
 - semantic_form_for article, :url => [article.project, article], :html => {:multipart => true , :class => "stack"}, :live_validations => true do |f|
   = error_messages_for :article
   - f.inputs do
     = f.input :title
     = f.input :citation_source
     = f.input :citation_author
-    = f.input :citation_date
-    = f.input :content, :input_html => {:rows => 12}
+    = f.input :citation_date, :as => :string, :input_html => {:class => "datepicker"}
+    = f.input :content, :input_html => {:rows => 10}
     - f.inputs :for => [:assets, article.assets.build] do |af|
-      = af.input :data, :as => :file, :label => "Add Attachment", :input_html => {:size => 20}
+      = af.input :data, :as => :file, :label => false, :hint => "Upload a file. Max 10 MB.", :input_html => {:size => 20} 
     = f.input :tag_list
     
   - f.buttons do
