--- a/app/views/events/_form_javascript.html.haml
+++ b/app/views/events/_form_javascript.html.haml
@@ -7,12 +7,12 @@
     
     $('#event_repeat_until').change(function() {
       $('#event_repeat_until_date_input').hide();
-      $('#event_repeat_until_date_input select').attr('disabled', 'disabled');
+      $('#event_repeat_until_date').attr('disabled', 'disabled');
       $('#event_repeat_until_count_input').hide();
       $('#event_repeat_until_count').attr('disabled', 'disabled');
       if (this.value == "date") {
         $('#event_repeat_until_date_input').show();
-        $('#event_repeat_until_date_input select').removeAttr('disabled');
+        $('#event_repeat_until_date').removeAttr('disabled');
       }
       if (this.value == "count") {
         $('#event_repeat_until_count_input').show();
