--- a/app/views/timesheets/_timesheet.html.haml
+++ b/app/views/timesheets/_timesheet.html.haml
@@ -20,6 +20,7 @@
         .timelog-date
           = timelog.date
         .timelog-actions
-          = link_to image_tag("delete.png"), [@project, timelog], :class => :delete
+          - if !@archieved
+            = link_to image_tag("delete.png"), [@project, timelog], :class => :delete
         .clear
       .clear
