--- a/app/views/events/_add_form.html.haml
+++ b/app/views/events/_add_form.html.haml
@@ -45,18 +45,18 @@
   = error_messages_for :event
   - f.inputs do
     = f.input :summary, :label => "Subject"
-    = f.input :start_at_date, :as => :string, :label => "What date?", :input_html => {:value => event.start_at.to_date, :class => "datepicker"}
-    = f.input :start_at, :as => :time, :label => "What time?", :input_html => {:value => event.start_at.to_s(:time)}, :include_blank => false
-    = f.input :all_day, :label => "All day?"
-    = f.input :duration, :label => "How long?"
     = f.input :location, :label => "Where?"
-    = f.input :repeat_frequency, :as => :select, :collection => EventSeries::RECURRING_TYPES, :label => "Repeat every", :include_blank => "No repeat"
-    = f.input :on_wdays, :as => :check_boxes, :collection => EventSeries::WDAYS, :checked => event.on_wdays, :label => "Wdays"
+    = f.input :start_at_date, :as => :string, :label => "What date?", :input_html => {:value => event.start_at.to_date, :class => "datepicker"}
+    = f.input :all_day, :label => "All day event?"
+    = f.input :start_at, :as => :time, :label => "What time?", :input_html => {:value => event.start_at.to_s(:time)}, :include_blank => false
+    = f.input :duration, :label => "How long? (in hours)"
+    Repeat the event?
+    = f.input :repeat_frequency, :as => :select, :collection => EventSeries::RECURRING_TYPES, :label => false, :include_blank => "No repeat"
+    = f.input :on_wdays, :as => :check_boxes, :collection => EventSeries::WDAYS, :checked => event.on_wdays, :label => "Days"
   - f.inputs nil, :class => :repeat_until do
     = f.input :repeat_until, :as => :select, :collection => EventSeries::UNTIL_TYPES, :include_blank => false
     = f.input :repeat_until_date, :as => :string, :label => "Until Date", :input_html => {:class => "datepicker"}
     = f.input :repeat_until_count, :label => "Until Count"
-
     - project_members_except_me = @calendarable.roles.user_id_does_not_equal(current_user.id)
     - unless project_members_except_me.empty?
       - if @calendarable.is_a?(Project)
