--- a/app/views/tasks/edit.html.haml
+++ b/app/views/tasks/edit.html.haml
@@ -10,29 +10,52 @@
   - semantic_form_for [@project, @task] do |f|
     = render :partial => "layouts/logo_box"
     %h1 Task Properties
-    .gray
-      Task created by 
-      = @task.initiator.to_s
+    - if !@archieved
+      .gray
+        Task created by 
+        = @task.initiator.to_s
+        %br
+        at 
+        = to_date(@task.created_at)
+      %br  
+      Assigned To:
       %br
-      at 
-      = to_date(@task.created_at)
-    %br  
-    Assigned To:
-    %br
-    = f.collection_select :assign_to, @project.users, :id, :to_s, :prompt => 'Assigned to'
-    %br
-    %br  
-    Due By:
-    %br
-    = f.text_field :due_date, :class => "date_picker", :size => '15'
-    %br
-    %br
-    Priority:
-    %br
-    = f.collection_select :priority, Task::PRIORITIES, :id, :display_value
-    %br
-    %br
-    = f.submit "Update Task", :class => "but"
+      = f.collection_select :assign_to, @project.users, :id, :to_s, :prompt => 'Assigned to'
+      %br
+      %br  
+      Due By:
+      %br
+      = f.text_field :due_date, :class => "date_picker", :size => '15'
+      %br
+      %br
+      Priority:
+      %br
+      = f.collection_select :priority, Task::PRIORITIES, :id, :display_value
+      %br
+      %br
+      = f.submit "Update Task", :class => "but"
+    - else
+      .gray
+        Task created by 
+        = @task.initiator.to_s
+        %br
+        at 
+        = to_date(@task.created_at)
+        %br  
+        %br  
+        Assigned To:
+        %br
+        = @task.assignee
+        %br
+        %br  
+        Due By:
+        %br
+        = @task.due_date
+        %br
+        %br
+        Priority:
+        %br
+        = @task.priorityDecode.to_s()
   
 #content.right
   = render :partial => "layouts/header"
@@ -48,4 +71,5 @@
     - if logged_in?
       #new_comment_form
         #comment_errors
-        = render :partial => "comments/form", :locals => {:comment => @task.comments.new}
+        - if !@archieved
+          = render :partial => "comments/form", :locals => {:comment => @task.comments.new}
