--- a/app/views/timelogs/_form.html.haml
+++ b/app/views/timelogs/_form.html.haml
@@ -1,10 +1,11 @@
 = error_messages_for :timelog
 
-- semantic_form_for [@project, timelog], :html => {:class => "inline"}, :live_validations => true do |f|
-  - f.inputs do
-    = f.input :timesheet_description
-    = f.input :date, :as => :string, :input_html => {:class => "datepicker"}
-    = f.input :hours
-  - f.buttons do
-    = f.commit_button "Log time"
+- if !@archieved
+  - semantic_form_for [@project, timelog], :html => {:class => "inline"}, :live_validations => true do |f|
+    - f.inputs do
+      = f.input :timesheet_description
+      = f.input :date, :as => :string, :input_html => {:class => "datepicker"}
+      = f.input :hours
+    - f.buttons do
+      = f.commit_button "Log time"
 .clear
