--- a/app/views/wiki_pages/index.html.haml
+++ b/app/views/wiki_pages/index.html.haml
@@ -1,11 +1,12 @@
 - content_for :sidebar do
-  %h1 Coedit new doc
-  = render :partial => "shared/learnmore"  
-  - semantic_form_for [@project, @project.wiki_pages.new] do |f|
-    - f.inputs do
-      =f .input :title, :class=>'gray'
-    - f.buttons do
-      = f.commit_button "Create"
+  - if !@archieved
+    %h1 Coedit new doc
+    = render :partial => "shared/learnmore"  
+    - semantic_form_for [@project, @project.wiki_pages.new] do |f|
+      - f.inputs do
+        =f .input :title, :class=>'gray'
+      - f.buttons do
+        = f.commit_button "Create"
 
 %table.index
   %tr.header
@@ -38,11 +39,14 @@
           = smart_date(wiki_page.versions.last.created_at)
       - unless wiki_page.deleted_at?
         %td
-          = link_to image_tag('edit.png'), [:edit, @project, wiki_page]
+          - if !@archieved
+            = link_to image_tag('edit.png'), [:edit, @project, wiki_page]
         %td
           = link_to "Compare", [:diff, @project, wiki_page] if wiki_page.version > 1
         %td
-          = link_to image_tag('delete.png'), [@project, wiki_page], :method => :delete
+          - if !@archieved
+            = link_to image_tag('delete.png'), [@project, wiki_page], :method => :delete
       - else
         %td
-          = link_to "Reopen", [:restore, @project, wiki_page]
+          - if !@archieved
+            = link_to "Reopen", [:restore, @project, wiki_page]
