--- a/app/views/project_logos/_new.html.erb
+++ b/app/views/project_logos/_new.html.erb
@@ -5,6 +5,6 @@
     <%= form.file_field :image %>
   </p>
   <p>
-    <%= form.submit 'Create', :controller => 'project_logos', :action=> 'create' %>
+    <%= form.submit 'Create', :controller => 'project_logo', :action=> 'create' %>
   </p>
 <% end %>
